--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.rotor">
+    package="com.twistedequations.rotor">
 
-    <application />
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <application >
+        
+        <receiver android:name=".KitkatMediaButtonReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_BUTTON"/>
+            </intent-filter>
+        </receiver>
+    </application>
 
 </manifest>
